# ccalc

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  docs.yml  release.yml
crates/ccalc/: Cargo.toml
crates/ccalc-engine/: Cargo.toml  README.md
crates/ccalc-engine/benches/: engine.rs
crates/ccalc-engine/src/: datetime.rs  env.rs  eval.rs  eval_tests.rs  exec.rs  fft.rs  io.rs  json.rs  lib.rs  mat.rs  parser.rs  parser_tests.rs  plugin.rs
crates/ccalc-plot/: Cargo.toml
crates/ccalc-plot/src/: ascii.rs  colormap.rs  contour.rs  dispatch.rs  file.rs  lib.rs  proj3d.rs  style.rs  surface.rs
crates/ccalc-plot/tests/: svg_png_tests.rs
crates/ccalc/src/: config.rs  help.rs  highlight.rs  main.rs  repl.rs  repl_tests.rs
docs/: book.toml
docs/book/: 404.html  index.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-16215fbe.js  searchindex-1dd5d310.js  searchindex-4d41bee8.js  toc-90c69fb2.js  toc-9b0a7278.js  toc-a0763bf2.js  toc.html
docs/book/architecture/: engine.html  evaluator.html  overview.html  parser.html
docs/book/ccalc/: phase1-variables.html  phase2-functions.html  roadmap.html
docs/book/guide/: arithmetic.html  functions.html  getting-started.html  memory.html  number-bases.html  pipe-mode.html  precision.html  repl.html  variables.html
docs/book/octave/: phase1-variables.html  roadmap.html
docs/src/: SUMMARY.md  introduction.md
docs/src/architecture/: engine.md  evaluator.md  index.md  overview.md  parser.md
docs/src/ccalc/: index.md  phase10-io.md  phase105-fileio.md  phase11-control-flow.md  phase115-extended-control-flow.md  phase12-user-functions.md  phase125-cell-arrays.md  phase126-language-polish.md  phase13-structs.md  phase135-struct-arrays.md  phase136-backslash-path.md  phase14-error-handling.md  phase15-indexed-assignment.md  phase156-scoping.md  phase16-packages.md  phase17-statistics.md  phase18-linear-algebra.md  phase19-repl-tooling.md  phase205-mat.md  phase20a-json.md  phase20c-csv.md  phase21-string-regex.md  phase22-datetime.md  phase23-set-operations.md  phase24-polynomials.md  phase25-eval.md  phase26-fft.md  phase27-complex-matrices.md  phase28-plugins.md  phase29-plot.md  phase3-matrices.md  phase30-colormap.md  phase31-repl-ux.md  phase4-matrix-ops.md  phase5-range.md  phase6-indexing.md  phase7-logic.md  phase75-vector-utils.md  phase8-complex.md  phase9-strings.md  (+1 more)
docs/src/guide/: arithmetic.md  cell-arrays.md  complex.md  configuration.md  containers-map.md  control-flow.md  csv.md  datetime.md  error-handling.md  eval.md  fft.md  file-io.md  formatted-output.md  functions.md  getting-started.md  index.md  json.md  linear-algebra.md  logic.md  mat.md  matrices.md  memory.md  number-bases.md  pipe-mode.md  plot.md  plugins.md  polynomials.md  precision.md  repl.md  scoping.md  set-operations.md  statistics.md  strings.md  structs.md  user-functions.md  variables.md  vectors.md
docs/src/octave/: phase1-variables.md  phase2-functions.md  roadmap.md
examples/: ac_impedance.calc  ac_impedance.ccalc  ac_impedance.m  bitwise.calc  bitwise.m  cell_arrays.calc  complex_matrix.m  complex_matrix_ext.m  complex_numbers.calc  complex_numbers.m  control_flow.calc  cylinder.calc  cylinder.ccalc  data_storage.calc  data_storage.ccalc  datetime.calc  datetime.m  dyn_field_demo.m  dynamic_eval.m  error_handling.calc  euclid_helper.calc  extended_control_flow.calc  fft_demo.calc  file_io.calc  format_modes.calc  formatted_output.calc  imagesc_demo.calc  indexed_assignment.m  language_polish.calc  linear_algebra.calc  logic.calc  logic.m  matrix_newline_demo.m  matrix_ops.calc  matrix_ops.m  mortgage.calc  mortgage.ccalc  mortgage.m  path_system.calc  plot3_demo.calc  (+17 more)
examples/annotations/: annotations.calc
examples/color_system_demo/: color_system_demo.calc
examples/colormap/: imagesc_demo.calc  julia.calc  julia_high.calc  mandelbrot.calc  mandelbrot_high.calc
examples/containers_map_demo/: containers_map_demo.calc
examples/contour_demo/: contour_demo.calc
examples/csv/: csv.calc
examples/csv/output/: cities.csv  grades.tsv  pure_numeric.csv  summary.csv  temps.tsv
examples/csv/tmp/: grades.csv  sensor.csv
examples/dir_demo/: dir_demo.m
examples/errorbar_demo/: errorbar_demo.calc
examples/figure_appearance_demo/: figure_appearance_demo.calc
examples/file_io/: file_io.calc
examples/file_io/output/: .gitignore  appended.txt  demo_log.txt  measurements.csv  results.tsv  selected.mat  session.mat
examples/fill_area_polar_demo/: fill_area_polar_demo.calc  fill_area_polar_demo.m
examples/hold_demo/: hold_demo.calc
examples/imshow_demo/: imshow_demo.calc  imshow_demo.m
examples/json/: json.calc
examples/json/output/: config.json  result.json  students.json
examples/json/tmp/: result.json  summary.json
examples/julia/: julia.calc
examples/mandelbrot/: mandelbrot.calc
examples/mat/: mat.calc
examples/mat/fixtures/: sample.mat
examples/pie_demo/: pie_demo.calc
examples/plot3_file/: plot3_file.calc
examples/plot_extended_file/: plot_extended.calc  plot_extended_file.calc
examples/plot_file/: plot_file.calc
examples/primitives_demo/: primitives_demo.calc
examples/quiver_demo/: quiver_demo.calc
examples/scatter_color_demo/: scatter_color_demo.calc
examples/scoping/: scoping.calc
examples/scoping/+geom/: circle_area.calc  rect_area.calc
examples/scoping/+utils/: clamp.calc  lerp.calc
examples/scoping/private/: clamp.calc  lerp.calc
examples/subplot_demo/: subplot_demo.calc
examples/surf_demo/: mesh_demo.calc  surf_demo.calc
examples/yyaxis_demo/: yyaxis_demo.calc
src/: eval.rs  help.rs  main.rs  memory.rs  parser.rs  repl.rs
