[package]
name = "ccalc"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
description = "Command-line calculator with accumulator, memory cells, multi-base arithmetic, and script file support"
readme = "../../README.md"
keywords = ["calculator", "repl", "cli", "math", "arithmetic"]
categories = ["command-line-utilities"]
exclude = ["CLAUDE.md", ".debug/**"]

[[bin]]
name = "ccalc"
path = "src/main.rs"

[features]
default = []
# Pass through to ccalc-engine — see ccalc-engine/Cargo.toml for build requirements.
blas = ["ccalc-engine/blas"]
blas-static = ["ccalc-engine/blas-static"]
json = ["ccalc-engine/json"]
mat = ["ccalc-engine/mat"]
regex = ["ccalc-engine/regex"]

[dependencies]
rustyline = "14"
ccalc-engine = { path = "../ccalc-engine", version = "0.30.0" }
toml = "0.8"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
